<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:showDividers="middle">

    <PreferenceCategory
        app:icon="@drawable/ic_one_day_list"
        app:key="list_category"
        app:title="@string/show">

        <ListPreference
            app:defaultValue="@string/default_value_today"
            app:entries="@array/entities_list_show_strategy"
            app:entryValues="@array/values_list_show_strategy"
            app:iconSpaceReserved="false"
            app:key="list_show_strategy"
            app:title="@string/title_list_show_strategy"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/default_value_unfinished"
            app:entries="@array/entities_list_group_priority"
            app:entryValues="@array/values_list_group_priority"
            app:iconSpaceReserved="false"
            app:key="list_group_priority"
            app:title="@string/title_list_group_priority"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="show_allow_finished"
            app:title="@string/show_allow_finished" />

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="show_allow_expired"
            app:title="@string/show_allow_expired" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>