<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_conner_surface"
    android:paddingStart="@dimen/dp_24"
    android:paddingTop="@dimen/dp_24"
    android:paddingEnd="@dimen/dp_12"
    android:paddingBottom="@dimen/dp_12"
    tools:ignore="RtlSymmetry">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_sure_delete_event"
        android:textAppearance="?attr/textAppearanceSubtitle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_never_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/topic_never_remind"
        android:textAppearance="?attr/textAppearanceCaption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <Switch
        android:id="@+id/sw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="@+id/tv_never_remind"
        app:layout_constraintStart_toEndOf="@+id/tv_never_remind"
        app:layout_constraintTop_toTopOf="@+id/tv_never_remind" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:padding="@dimen/dp_12"
        android:text="@string/sure"
        android:textStyle="bold"
        android:textColor="?attr/colorSecondary"
        android:textAppearance="?attr/textAppearanceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:padding="@dimen/dp_12"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:textColor="?attr/colorSecondary"
        android:textAppearance="?attr/textAppearanceButton"
        app:layout_constraintEnd_toStartOf="@id/tv_sure"
        app:layout_constraintTop_toBottomOf="@id/sw" />

</androidx.constraintlayout.widget.ConstraintLayout>