<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.knight.oneday.add.AddEventViewModel" />

        <variable
            name="tagAdapter"
            type="com.knight.oneday.adapters.TagPickerAdapter" />

        <variable
            name="onChoiceInputClicked"
            type="com.knight.oneday.views.choice.ChoiceInputView.OnChoiceInputClicked" />

        <variable
            name="onDLStatusChangedListener"
            type="com.ramotion.directselect.DSListView.OnDSListViewStatusChangedListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_event_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/add_back_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            android:background="?attr/actionBarItemBackground"
            android:padding="@dimen/dp_12"
            android:src="@drawable/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_4"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/add_event_title"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_back_ic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_name_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:alpha="?attr/emphasisMediumAlpha"
            android:text="@string/name"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintStart_toStartOf="@id/add_title_tv"
            app:layout_constraintTop_toBottomOf="@id/add_title_tv" />

        <EditText
            android:id="@+id/add_name_il"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@null"
            android:hint="@string/event_name"
            android:paddingStart="@dimen/dp_8"
            app:layout_constraintStart_toStartOf="@id/add_title_tv"
            app:layout_constraintTop_toBottomOf="@id/add_name_hint" />

        <ImageView
            android:id="@+id/subject_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@drawable/divider"
            app:backgroundTint="@color/color_on_surface_emphasis_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_name_il" />


        <com.knight.oneday.views.choice.ChoiceInputView
            android:id="@+id/add_date_civ"
            bindContentText="@{vm.previewDateContent}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onChoiceInputClicked.onChoiceInputClicked(0)}"
            app:civIcon="@drawable/ic_one_day_date"
            app:civTitle="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subject_divider" />

        <com.knight.oneday.views.choice.ChoiceInputView
            android:id="@+id/add_time_civ"
            bindContentText="@{vm.previewTimeContent}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> onChoiceInputClicked.onChoiceInputClicked(1)}"
            app:civIcon="@drawable/ic_one_day_schedule"
            app:civTitle="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_date_civ" />

        <com.knight.oneday.views.EventTagPickerBox
            android:id="@+id/add_tag_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintEnd_toEndOf="@id/add_time_civ"
            app:layout_constraintStart_toStartOf="@id/add_time_civ"
            app:layout_constraintTop_toBottomOf="@id/add_time_civ" />

        <ImageView
            android:id="@+id/add_tag_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:background="@drawable/divider"
            app:backgroundTint="@color/color_on_surface_emphasis_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_tag_picker" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:text="@string/add_event"
            android:theme="@style/OneDay.PrimarySecondary.Button"
            app:icon="@drawable/ic_one_day_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_tag_divider" />

        <com.ramotion.directselect.DSListView
            android:id="@+id/add_tag_dsl"
            bindAdapter="@{tagAdapter}"
            bindStatusChangeListener="@{onDLStatusChangedListener}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface"
            android:visibility="invisible"
            app:picker_box_view="@id/add_tag_picker"
            app:scale_animations="true"
            app:scale_animations_factor="1.15"
            app:scale_animations_pivot_center="true"
            app:selected_index="1"
            app:selector_background="@drawable/tag_picker_bg_list_selector" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>